# cmd/api/main.go
@@ -8,6 +8,7 @@ import (
 
 	"url-shortener/pkg/cache"
 	"url-shortener/pkg/http"
+	"url-shortener/pkg/middleware"
 	"url-shortener/pkg/service"
 	"url-shortener/pkg/storage"
 
@@ -52,12 +53,29 @@ func main() {
 	// Service
 	linkService := service.NewLinkService(linkStorage, linkCache, pool)
 
+	// OAuth Middleware
+	oauthConfig := middleware.OAuthConfig{
+		IssuerURL: os.Getenv("OIDC_ISSUER"),
+		Audience:  os.Getenv("OIDC_AUDIENCE"),
+	}
+	if oauthConfig.IssuerURL == "" {
+		oauthConfig.IssuerURL = "https://dev-123456.okta.com" // Default for development
+	}
+	if oauthConfig.Audience == "" {
+		oauthConfig.Audience = "url-shortener"
+	}
+
+	oauthMiddleware, err := middleware.NewOAuthMiddleware(oauthConfig)
+	if err != nil {
+		log.Fatal("Failed to create OAuth middleware:", err)
+	}
+
 	// Handler
 	handler := http.NewHandler(linkService)
 
 	// Router
 	r := chi.NewRouter()
-	http.SetupRoutes(r, handler)
+	http.SetupRoutes(r, handler, oauthMiddleware)
 
 	// Server
 	log.Println("Starting API server on :8080")
